src/css/App.css
.App {
  text-align: center;
  height: 100vh;
}
#mainContainer{
  height: 100%;
  display: flex;
}
.resizable {
  resize: both;
  overflow: hidden;
}
#chat{
  border: black solid;
  border-width: 0 0 0 3px;
  flex: 0 0 350px;
  height: 100%;
}
canvas {
  background-color: white;
}
.canvasSpace{
  width: 100%;
  height: 100%;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -o-user-select: none;
  user-select: none;
}

#chat li{
  list-style: none;
}
ul{
  margin: 0;
  padding: 12px 8px;
  overflow-wrap: break-word;
}
#chatTF{
}
@media screen and (max-width: 800px) {
  #mainContainer{
    align-items: stretch;
    flex-direction: column;
  }
  #chat{
    flex: 0 0 300px;
    border-width: 3px 0 0;
  }
}

